Homeworks/hw1 copy/errors.txt
1. Comment out #include <stdio.h> from errorwarmup1.c (place "//" before it)
1) errorwarmup.c:15:2: warning: implicitly declaring library function 'printf' with type 'int (const char *, ...)' [-Wimplicit-function-declaration]
        printf("Integer: %d\n",ival);
        ^
errorwarmup.c:15:2: note: include the header <stdio.h> or explicitly provide a declaration for 'printf'

2. Declare the same variable name twice
2) errorwarmup.c:52:14: error: redefinition of 'result'
        int result, result = ival*5;

3. Remove a variable declaration
3)errorwarmup.c:52:14: error: redefinition of 'result'
        int result, result = ival*5;

4. Misspell a variable name or function name
4)errorwarmup.c:66:2: error: use of undeclared identifier 'cel'; did you mean 'cell'?
        cel = (fahr-32) * (5/9);
        ^~~
        cell
errorwarmup.c:65:8: note: 'cell' declared here
        float cell;
              ^
errorwarmup.c:67:9: error: use of undeclared identifier 'cel'; did you mean 'cell'?
        return cel;
               ^~~
               cell
errorwarmup.c:65:8: note: 'cell' declared here
        float cell;
              ^

5. Remove a closed curly brace
5) errorwarmup.c:73:1: error: function definition is not allowed here
{
^
errorwarmup.c:86:1: error: function definition is not allowed here
{
^
errorwarmup.c:113:1: error: expected '}'
^
errorwarmup.c:64:1: note: to match this '{'
{
^


